# pointfoot-mujoco-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_cn.md  simulator.py
config/: robot_config.h.cmake.in
model/: robot.xml
sdk/limxsdk-sim/: CMakeLists.txt  package.xml
sdk/limxsdk-sim/include/limxsdk/: apibase.h  datatypes.h  humanoid_sim.h  macros.h  pointfoot_sim.h  wheellegged_sim.h
sdk/limxsdk-sim/lib/win/: limxsdk_sim.lib
sdk/mujoco-2.2.0/lib/aarch64/: libmujoco.so.2.2.0
sdk/mujoco-2.2.0/lib/amd64/: libmujoco.so.2.2.0
sdk/mujoco-2.2.0/lib/win/: mujoco.lib
sdk/pointfoot_sdk_sim/include/limxsdk/: apibase.h  datatypes.h  pointfoot_sim.h
sdk/pointfoot_sdk_sim/lib/win/: pointfoot_sdk_sim.lib
src/: simulator.cpp  visualizer.cpp
